--- a/debian/rules
+++ b/debian/rules
@@ -35,7 +35,7 @@ get-orig-source:
 	         lib/libusbhid sys/cam ; do \
 	    svn export $(SVN)/$$i $(ORIGDIR)/$$i ; \
 	done
-	svn cat $(SVN)/$$i/share/misc/usb_hid_usages > $(ORIGDIR)/lib/libusbhid/usb_hid_usages
+	svn cat $(SVN)/share/misc/usb_hid_usages > $(ORIGDIR)/lib/libusbhid/usb_hid_usages
 	mkdir -p $(ORIGDIR)/sys/kern && \
 	    svn cat $(SVN)/sys/kern/subr_sbuf.c > $(ORIGDIR)/sys/kern/subr_sbuf.c
 	# Remove unused files with non GPL compatible license (eg BSD 4 clauses)
