* Link all libraries dynamically with each other.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3118 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -25,7 +25,7 @@ PATH:=/usr/lib/freebsd:$(PATH)
 DESTDIR=$(CURDIR)/debian/tmp
 PMAKE=COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
 export SHLIB_MAJOR=0
-export SHLIBDIR=/usr/lib
+export SHLIBDIR=./
 
 get-orig-source:
 	rm -rf $(ORIGDIR)
