* Add a libsbuf0-udeb package.   * Add "(udeb)" to the short description of all udeb packages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3168 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,18 @@ Description: FreeBSD string buffer library
  numerous functions such as append, copy, cat, print, trim whitespace
  characters, etc.
 
+Package: libsbuf0-udeb
+XC-Package-Type: udeb
+Section: debian-installer
+Architecture: kfreebsd-any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: FreeBSD string buffer library (udeb)
+ This library provide a way to handle string buffers. It contains
+ numerous functions such as append, copy, cat, print, trim whitespace
+ characters, etc.
+ .
+ This is a minimal package for use in debian-installer.
+
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-any
@@ -61,7 +73,7 @@ XC-Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: FreeBSD GEOM library
+Description: FreeBSD GEOM library (udeb)
  This library provides an interface to GEOM, a modular disk I/O request
  transformation framework provided by the kernel of FreeBSD.
  .
@@ -122,7 +134,7 @@ XC-Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Development files for libusb2
+Description: Development files for libusb2 (udeb)
  Library for programming USB applications without the knowledge
  of FreeBSD kernel internals.
  .
@@ -209,7 +221,7 @@ Section: debian-installer
 XC-Package-Type: udeb
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: FreeBSD IPX address conversion support library
+Description: FreeBSD IPX address conversion support library (udeb)
  The IPX library provides a set of routune to convert IPX addresses.
  .
  This is a minimal package for use in debian-installer.
@@ -217,7 +229,7 @@ Description: FreeBSD IPX address conversion support library
 Package: libkiconv4
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: FreeBSD kernel side iconv library
+Description: FreeBSD kernel side iconv library (udeb)
  The kiconv library provides multi-byte character conversion tables for kernel
  side iconv service.
 
