--- a/debian/rules
+++ b/debian/rules
@@ -185,6 +185,7 @@ binary-arch: build install
 	dh_makeshlibs -a
 	dh_makeshlibs -plibgeom0 --add-udeb=libgeom0-udeb
 	dh_makeshlibs -plibipx2 --add-udeb=libipx2-udeb
+	dh_makeshlibs -plibsbuf0 --add-udeb=libsbuf0-udeb
 	dh_makeshlibs -plibusb2 --add-udeb=libusb2-udeb
 	dh_installdeb -a
 	dh_shlibdeps -a
