--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Package: libsbuf-dev
 Section: libdevel
 Architecture: any
 Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
-Replaces: kfreebsd-kernel-headers (<< 0.54)
+Replaces: kfreebsd-kernel-headers
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
