--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 7), quilt, freebsd-buildutils,
+Build-Depends: debhelper (>= 7), freebsd-buildutils,
  libbsd-dev (>= 0.1.4) [kfreebsd-any],
  libc0.1-dev (>= 2.10) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
