--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: freebsd-libs
 Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
-Uploaders: Aurelien Jarno <aurel32@debian.org>
+Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
 Build-Depends: debhelper (>= 7), freebsd-buildutils,
  libbsd-dev (>= 0.1.4) [kfreebsd-any],
  libc0.1-dev (>= 2.10) [kfreebsd-any],
