Set numeric user and group id to 0 for files in get-orig-source
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3368 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ get-orig-source:
 	rm -f $(ORIGDIR)/sys/cam/scsi/scsi_ch.*
 	rm -f $(ORIGDIR)/lib/libkvm/kvm_ia64.c
 	rm -f $(ORIGDIR)/lib/libkvm/kvm_powerpc.c
-	tar -czf ../$(TARNAME) $(ORIGDIR)
+	tar --numeric-owner --owner 0 --group 0 -czf ../$(TARNAME) $(ORIGDIR)
 	rm -rf $(ORIGDIR)
 
 ifeq ($(kernel), kfreebsd)
