Switch to use the libbsd-overlay
Bump libbsd-dev Build-Depends to (>= 0.3.0).
Add pkg-config to Build-Depends.
Remove some now obsolete porting code.


git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3429 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,8 @@ SHELL = bash
 export DH_OPTIONS
 
 CFLAGS = -Wall -g -pipe -fPIC -I. -I$(CURDIR)/sys -D_GNU_SOURCE \
-         -D'__FBSDID(string)=' -D__va_list=__builtin_va_list
+         $(shell pkg-config --cflags libbsd-overlay) \
+         -D__va_list=__builtin_va_list
 
 ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
