--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
-Build-Depends: debhelper (>= 7), freebsd-buildutils,
- libbsd-dev (>= 0.1.4) [kfreebsd-any],
+Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils,
+ libbsd-dev (>= 0.3.0) [kfreebsd-any],
  libc0.1-dev (>= 2.10) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
  kfreebsd-kernel-headers (>= 0.54) [kfreebsd-any],
