Remove ‘XC-’ prefix from Package-Type field
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3430 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Description: FreeBSD string buffer library
  characters, etc.
 
 Package: libsbuf0-udeb
-XC-Package-Type: udeb
+Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -74,7 +74,7 @@ Description: Development files for libgeom
  compile applications that use libgeom.
 
 Package: libgeom0-udeb
-XC-Package-Type: udeb
+Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -135,7 +135,7 @@ Description: Development files for libusb2
  used on Linux.
 
 Package: libusb2-udeb
-XC-Package-Type: udeb
+Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -223,7 +223,7 @@ Description: Development files for libipx
 
 Package: libipx2-udeb
 Section: debian-installer
-XC-Package-Type: udeb
+Package-Type: udeb
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD IPX address conversion support library (udeb)
