Do not build profile libraries, which we don't use anyway
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3447 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -31,7 +31,7 @@ TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
 PATH := /usr/lib/freebsd:$(PATH)
 DESTDIR = $(CURDIR)/debian/tmp
 PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 \
-        NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
+        NOSHARED=NO NO_SHARED=NO NO_PROFILE=1 DESTDIR=$(DESTDIR) make
 export SHLIB_MAJOR = 0
 kernel = $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 
