* Build-Depend on libbsd-dev everywhere, not just [kfreebsd-any]     (fixes FTBFS on non-kFreeBSD).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3484 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
 Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils,
- libbsd-dev (>= 0.3.0) [kfreebsd-any],
+ libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-0exp2) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
  kfreebsd-kernel-headers (>= 0.54) [kfreebsd-any],
