--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: freebsd-libs
 Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
-Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
+Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>, Robert Millan <rmh@debian.org>
 Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils,
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-0exp2) [kfreebsd-any],
