* Move libsbuf.so.0 to /lib (needed by /sbin/zfs and /sbin/zpool).     (Closes: #637100)   * Move libipx.so.2 to /lib (needed by ifconfig).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3677 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -149,11 +149,11 @@ install: build
 	dh_installdirs
 
 	mkdir -p $(DESTDIR)/lib $(DESTDIR)/usr/lib $(DESTDIR)/usr/include $(DESTDIR)/usr/share/man/man3
-	$(PMAKE) -C $(CURDIR)/lib/libsbuf install SHLIBDIR=/usr/lib
+	$(PMAKE) -C $(CURDIR)/lib/libsbuf install SHLIBDIR=/lib
 ifeq ($(kernel), kfreebsd)
 	$(PMAKE) -C $(CURDIR)/lib/libcam install SHLIBDIR=/usr/lib
 	$(PMAKE) -C $(CURDIR)/lib/libgeom install SHLIBDIR=/lib
-	$(PMAKE) -C $(CURDIR)/lib/libipx install SHLIBDIR=/usr/lib
+	$(PMAKE) -C $(CURDIR)/lib/libipx install SHLIBDIR=/lib
 	$(PMAKE) -C $(CURDIR)/lib/libkiconv install SHLIBDIR=/usr/lib
 	$(PMAKE) -C $(CURDIR)/lib/libkvm install SHLIBDIR=/lib
 	$(PMAKE) -C $(CURDIR)/lib/libdevstat install SHLIBDIR=/usr/lib
