--- a/debian/control
+++ b/debian/control
@@ -259,3 +259,19 @@ Depends: libjail1 (= ${binary:Version}), ${misc:Depends}
 Description: Development files for libjail
  This package contains the header files and static library needed to
  compile applications that use libjail.
+
+Package: libalias7
+Architecture: kfreebsd-any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: FreeBSD packet aliasing library
+ The libalias library is a collection of functions for aliasing and
+ dealiasing of IP packets, intended for masquerading and network address
+ translation (NAT).
+
+Package: libalias-dev
+Section: libdevel
+Architecture: kfreebsd-any
+Depends: libalias7 (= ${binary:Version}), ${misc:Depends}
+Description: Development files for libalias
+ This package contains the header files and static library needed to
+ compile applications that use libalias.
