--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,9 @@ Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils,
  libgdbm-dev [kfreebsd-any],
  kfreebsd-kernel-headers (>= 0.54) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
- libexpat-dev [kfreebsd-any]
+ libexpat-dev [kfreebsd-any],
+# libncurses5-dev: needed by libalias
+ libncurses5-dev [kfreebsd-any],
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.9.2
