--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>, Robert Millan <rmh@debian.org>
-Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils,
+Build-Depends: debhelper (>= 7), pkg-config, freebsd-buildutils (>= 9),
  libbsd-dev (>= 0.3.0),
  libc0.1-dev (>= 2.13-0exp2) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
