--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.9.2
 
-Package: libsbuf0
+Package: libsbuf6
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD string buffer library
@@ -24,7 +24,7 @@ Description: FreeBSD string buffer library
  numerous functions such as append, copy, cat, print, trim whitespace
  characters, etc.
 
-Package: libsbuf0-udeb
+Package: libsbuf6-udeb
 Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
@@ -39,13 +39,13 @@ Description: FreeBSD string buffer library (udeb)
 Package: libsbuf-dev
 Section: libdevel
 Architecture: any
-Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
+Depends: libsbuf6 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Replaces: kfreebsd-kernel-headers
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
-Package: libcam0
+Package: libcam6
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD CAM (Common Access Method) library
@@ -55,7 +55,7 @@ Description: FreeBSD CAM (Common Access Method) library
 Package: libcam-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libcam0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
+Depends: libcam6 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam
  This package contains the header files and static library needed to
  compile applications that use libcam.
@@ -86,7 +86,7 @@ Description: FreeBSD GEOM library (udeb)
  .
  This is a minimal package for use in debian-installer.
 
-Package: libusbhid4
+Package: libusbhid4debian
 Architecture: kfreebsd-any
 Depends: libusbhid-common (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD library to access USB HID devices
@@ -111,12 +111,12 @@ Description: Common files for the USB HID devices FreeBSD library
 Package: libusbhid-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libusbhid4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusbhid4debian (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
 
-Package: libusb2
+Package: libusb2debian
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD userspace USB programming library
@@ -126,7 +126,7 @@ Description: FreeBSD userspace USB programming library
 Package: libusb2-dev
 Section: libdevel
 Architecture: kfreebsd-any
-Depends: libusb2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusb2debian (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Provides: libusb-1.0-0-dev
 Conflicts: libusb-dev
 Description: Development files for libusb2
@@ -136,7 +136,7 @@ Description: Development files for libusb2
  It should be API compatible with both libusb-1.0 and libusb-0.1
  used on Linux.
 
-Package: libusb2-udeb
+Package: libusb2debian-udeb
 Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-any
