Fix libnetgraph4 Description. (Closes: #658501)
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@4058 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -197,7 +197,7 @@ Description: Development files for libmemstat
 Package: libnetgraph4
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: FreeBSD memstat (kernel interface) library
+Description: FreeBSD netgraph (kernel interface) library
  The netgraph library provides a uniform interface for accessing kernel netgraph
  interface.
 
