--- a/debian/rules
+++ b/debian/rules
@@ -60,6 +60,10 @@ get-orig-source:
 	rm -f $(ORIGDIR)/sys/cam/scsi/scsi_ch.*
 	rm -f $(ORIGDIR)/lib/libkvm/kvm_ia64.c
 	rm -f $(ORIGDIR)/lib/libkvm/kvm_powerpc.c
+
+	# Remove all CAM kernel headers to ensure system-wide version is used instead
+	find $(ORIGDIR)/sys/cam -name \*.h | xargs rm -f
+
 	tar --numeric-owner --owner 0 --group 0 -czf ../$(TARNAME) $(ORIGDIR)
 	rm -rf $(ORIGDIR)
 
