--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.or
 Build-Depends: debhelper (>= 7), pkg-config,
  freebsd-buildutils (>= 9.0-3~),
  libbsd-dev (>= 0.3.0),
- libc0.1-dev (>= 2.13-0exp2) [kfreebsd-any],
+ libc0.1-dev (>= 2.13-31) [kfreebsd-any],
  libgdbm-dev [kfreebsd-any],
  kfreebsd-kernel-headers (>= 0.73) [kfreebsd-any],
 # libexpat-dev: aka bsdxml. needed by libgeom
